--- a/CspInterface/CspInterface/CspInterface.vcxproj.filters
+++ b/CspInterface/CspInterface/CspInterface.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="tcptools.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="common_util.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -54,6 +57,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="tcptools.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="common_util.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
