--- a/CspInterface/CspInterface/CspInterface.vcxproj
+++ b/CspInterface/CspInterface/CspInterface.vcxproj
@@ -81,13 +81,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="common.h" />
     <ClInclude Include="common_util.h" />
-    <ClInclude Include="config.h" />
     <ClInclude Include="csp.h" />
     <ClInclude Include="cspdefs.h" />
-    <ClInclude Include="cspService.h" />
-    <ClInclude Include="log.h" />
+    <ClInclude Include="hash.h" />
     <ClInclude Include="mutex.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -106,6 +103,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="hash.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="mutex.cpp" />
     <ClCompile Include="stdafx.cpp">
