--- a/GMNCSP/GMNCSP/GMNCSP.vcxproj
+++ b/GMNCSP/GMNCSP/GMNCSP.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="mutex.h" />
     <ClInclude Include="regedit.h" />
     <ClInclude Include="sjl22_api.h" />
+    <ClInclude Include="sjl22_api_zh.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -113,6 +114,7 @@
     <ClCompile Include="mutex.cpp" />
     <ClCompile Include="regedit.cpp" />
     <ClCompile Include="sjl22_api.cpp" />
+    <ClCompile Include="sjl22_api_zh.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
