--- a/GMNCSP/GMNCSP/GMNCSP.vcxproj
+++ b/GMNCSP/GMNCSP/GMNCSP.vcxproj
@@ -83,8 +83,8 @@
     <ClInclude Include="attribute.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="csp.h" />
+    <ClInclude Include="sjl22Service.h" />
     <ClInclude Include="cspService.h" />
-    <ClInclude Include="cspServiceImpl.h" />
     <ClInclude Include="hsmcmd.h" />
     <ClInclude Include="hsmdefs.h" />
     <ClInclude Include="hsm_com.h" />
@@ -92,16 +92,18 @@
     <ClInclude Include="log.h" />
     <ClInclude Include="mutex.h" />
     <ClInclude Include="regedit.h" />
+    <ClInclude Include="sjl22ServiceImpl.h" />
     <ClInclude Include="sjl22_api.h" />
     <ClInclude Include="sjl22_api_zh.h" />
+    <ClInclude Include="source_backup.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="attribute.cpp" />
     <ClCompile Include="config.cpp" />
+    <ClCompile Include="sjl22Service.cpp" />
     <ClCompile Include="cspService.cpp" />
-    <ClCompile Include="cspServiceImpl.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -115,8 +117,10 @@
     <ClCompile Include="log.cpp" />
     <ClCompile Include="mutex.cpp" />
     <ClCompile Include="regedit.cpp" />
+    <ClCompile Include="sjl22ServiceImpl.cpp" />
     <ClCompile Include="sjl22_api.cpp" />
     <ClCompile Include="sjl22_api_zh.cpp" />
+    <ClCompile Include="source_backup.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
